# Flock-Lab-GPU

./: Cargo.toml  Licence.MD  README.md
shaders/: agents.wgsl  boids_compute.wgsl  trails.wgsl
src/: lib.rs  main.rs
src/camera/: mod.rs
src/gpu/: mod.rs
src/renderer/: agent_renderer.rs  mod.rs  trail_renderer.rs
src/simulation/: agent.rs  cpu_simulation.rs  gpu_simulation.rs  mod.rs  spatial_hash.rs  species.rs
src/ui/: mod.rs
src/utils/: mod.rs
tests/: shaders.rs
